# html2md

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: anchors.rs  codes.rs  common.rs  containers.rs  dummy.rs  headers.rs  iframes.rs  images.rs  lib.rs  lists.rs  paragraph.rs  paragraphs.rs  quotes.rs  styles.rs  tables.rs
test-samples/: blank-bug-with-list-newlines.html  blank-bug-with-lists-from-text.html  blank-bug-with-strong-inside-link.html  blank-bug-with-tables-masked.html  blank-test.html  blank-test2.html  markdown-cheatsheet.html  markdown-readme.html  markdown-readme.md  md-syntax-sample.html
tests/: iframes.rs  images.rs  integration.rs  lists.rs  quotes.rs  styles.rs  tables.rs  unit.rs
