[package]
name = "html2md"
version = "0.1.0"
authors = ["Warren Galyen"]

description = "Library and binary to convert simple html documents into markdown"
repository = "https://github.com/wgalyen/html2md"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "GPL-3.0+"

[lib]
name = "html2md"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
lazy_static = "1.0.0"
html5ever = "0.22"
regex = "0.2"

[profile.release]
lto = true
panic = 'abort'

# TO use this on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.9.3", default-features = false }