[package]
name = "html2md"
version = "0.2.9"
authors = ["Warren Galyen"]
edition = "2018"

description = "Library and binary to convert simple html documents into markdown"
repository = "https://github.com/wgalyen/html2md"
readme = "README.md"
keywords = ["html", "markdown", "converter"]
categories = ["development-tools", "parsing", "parser-implementations"]
license = "GPL-3.0+"

[lib]
name = "html2md"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
lazy_static = "1.3.0"
html5ever = "0.22"
regex = "1.1.5"
percent-encoding = "1.0.1"

[dev-dependencies]
spectral = "0.6.0"

[profile.release]
lto = true
panic = 'abort'

# To use this project on Android we need JNI
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.11.0", default-features = false }